Improve responsivity - fix search result item overflow.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -123,6 +123,8 @@ div#page-document {
     }
 
     div.search-result {
+      overflow: auto;
+
       &:hover {
         div.controls {
           button {
